[package]
name = "nostr-rust"
version = "0.1.0"
authors = ["Christopher Coverdale <chris.coverdale24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.20.1", features = ["rand-std", "serde"] }
sha2 = "0.9.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_repr = "0.1.6"
